feat(desktop): Tauri shell, build pipeline, and bundled Java runtime
Builds on the backend desktop profile + web-root route (1c3b0ae) to deliver a
runnable, self-contained macOS bundle.

Desktop shell (desktop/, Tauri v2):
- spawns the Quarkus backend as a loopback sidecar (QUARKUS_PROFILE=desktop plus
  the three install-specific runtime paths), polls /api/ping, then navigates the
  splash window to the app
- bundles a jlinked Java 25 runtime and prefers it over system java: a dependency
  requires Java 25, and a Finder/launchd launch otherwise resolves an older system
  JVM (UnsupportedClassVersionError)
- single-instance lock (focuses the existing window instead of starting a second
  backend) and graceful shutdown (SIGTERM, then SIGKILL fallback); JVM stdout/stderr
  captured to backend.log

Build pipeline (scripts/build-desktop.sh):
- SPA (VITE_DESKTOP=true) -> backend package (profile=desktop) -> desktop-profile
  boot smoke-test -> jlink runtime -> tauri build -> .dmg, collected to dist-desktop/.
  The smoke-test catches a desktop profile that can't boot (a @QuarkusTest runs
  under the test profile and would not).

Backend desktop profile: give the otherwise prod-only-required config (Sentry DSN,
deployment env/url, form-auth session key) local offline defaults so the bundled
backend boots with no env vars.

Docs updated with the root-path discovery, the test-vs-desktop-profile and
Java-version lessons, and the jlink read-only-perms gotcha.